// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CanvasForm > should render 1`] = `
<div>
  <div
    class="canvas-form"
  >
    <div
      class="canvas-form__header"
    >
      <div
        class="form-header-row"
      >
        <div
          class="form-header"
        >
          <img
            alt="Choice"
            class="form-header__icon-route.from.steps.1.choice"
            src="/src/assets/eip/choice.png"
          />
          <h2
            class="form-header__title"
          >
            Choice
          </h2>
        </div>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-_r_1_"
              class="canvas-header-close cds--btn cds--btn--sm cds--layout--size-sm cds--btn--ghost cds--btn--icon-only"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_1_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
      <div
        aria-label="Single selectable form tabs"
        class="cds--content-switcher form-tabs cds--layout-constraint--size__default-md cds--layout-constraint--size__min-sm cds--layout-constraint--size__max-lg"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="cds--content-switcher-btn cds--content-switcher--selected"
          data-testid="tab-Required"
          role="tab"
          tabindex="0"
          title="Shows Required fields only"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="Required"
          >
            Required
          </span>
        </button>
        <button
          aria-selected="false"
          class="cds--content-switcher-btn"
          data-testid="tab-All"
          role="tab"
          tabindex="-1"
          title="Shows All fields"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="All"
          >
            All
          </span>
        </button>
        <button
          aria-selected="false"
          class="cds--content-switcher-btn"
          data-testid="tab-Modified"
          role="tab"
          tabindex="-1"
          title="Shows Modified fields only"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="Modified"
          >
            Modified
          </span>
        </button>
      </div>
      <div
        aria-label="Find properties by name"
        class="cds--search cds--search--sm filter-fields"
        role="search"
      >
        <div
          class="cds--search-magnifier"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="cds--search-magnifier-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
            />
          </svg>
        </div>
        <label
          class="cds--label"
          for="search-input-_r_4_"
          id="search-input-_r_4_-search"
        >
          Find properties by name
        </label>
        <input
          autocomplete="off"
          class="cds--search-input"
          data-testid="filter-fields"
          id="search-input-_r_4_"
          placeholder="Find properties by name"
          type="search"
          value=""
        />
        <button
          aria-label="Clear search input"
          class="cds--search-close cds--search-close--hidden"
          title="Clear search input"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="canvas-form__body"
    >
      <form
        class="cds--form kaoto-form kaoto-form__label"
      />
      <div
        class="cds--tile kaoto-form kaoto-form__empty"
        data-testid="no-field-found"
      >
        <div
          class="cds--inline-notification cds--inline-notification--info cds--inline-notification--hide-close-button"
          role="status"
        >
          <div
            class="cds--inline-notification__details"
          >
            <svg
              aria-hidden="true"
              class="cds--inline-notification__icon"
              fill="currentColor"
              focusable="false"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
                data-icon-path="inner-path"
                fill="none"
              />
              <path
                d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,6a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
              />
              <title>
                info icon
              </title>
            </svg>
            <div
              class="cds--inline-notification__text-wrapper"
            >
              <div
                class="cds--inline-notification__title"
                dir="auto"
              >
                No Required fields found
              </div>
              <div
                class="cds--inline-notification__subtitle"
                dir="auto"
              >
                No field found matching this criteria. Please switch to the All tab.
              </div>
              <a
                class="cds--link cds--link--inline"
              >
                Switch to All tab
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm > should render nothing if no schema and no definition is available 1`] = `
<div>
  <div
    class="canvas-form"
  >
    <div
      class="canvas-form__header"
    >
      <div
        class="form-header-row"
      >
        <div
          class="form-header"
        >
          <h2
            class="form-header__title"
          >
            route
          </h2>
        </div>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-_r_e_"
              class="canvas-header-close cds--btn cds--btn--sm cds--layout--size-sm cds--btn--ghost cds--btn--icon-only"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_e_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
      <div
        aria-label="Single selectable form tabs"
        class="cds--content-switcher form-tabs cds--layout-constraint--size__default-md cds--layout-constraint--size__min-sm cds--layout-constraint--size__max-lg"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="cds--content-switcher-btn cds--content-switcher--selected"
          data-testid="tab-Required"
          role="tab"
          tabindex="0"
          title="Shows Required fields only"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="Required"
          >
            Required
          </span>
        </button>
        <button
          aria-selected="false"
          class="cds--content-switcher-btn"
          data-testid="tab-All"
          role="tab"
          tabindex="-1"
          title="Shows All fields"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="All"
          >
            All
          </span>
        </button>
        <button
          aria-selected="false"
          class="cds--content-switcher-btn"
          data-testid="tab-Modified"
          role="tab"
          tabindex="-1"
          title="Shows Modified fields only"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="Modified"
          >
            Modified
          </span>
        </button>
      </div>
      <div
        aria-label="Find properties by name"
        class="cds--search cds--search--sm filter-fields"
        role="search"
      >
        <div
          class="cds--search-magnifier"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="cds--search-magnifier-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
            />
          </svg>
        </div>
        <label
          class="cds--label"
          for="search-input-_r_h_"
          id="search-input-_r_h_-search"
        >
          Find properties by name
        </label>
        <input
          autocomplete="off"
          class="cds--search-input"
          data-testid="filter-fields"
          id="search-input-_r_h_"
          placeholder="Find properties by name"
          type="search"
          value=""
        />
        <button
          aria-label="Clear search input"
          class="cds--search-close cds--search-close--hidden"
          title="Clear search input"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="canvas-form__body"
    >
      <div
        class="pf-v6-c-card"
        data-ouia-component-id="OUIA-Generated-Card-_r_i_"
        data-ouia-component-type="PF6/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v6-c-card__header"
        >
          <div
            class="pf-v6-c-card__header-main"
          >
            <div
              class="pf-v6-c-card__title"
            >
              <div
                class="pf-v6-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__body"
        >
          <div
            class="pf-v6-c-code-block"
          >
            <div
              class="pf-v6-c-code-block__content"
            >
              <pre
                class="pf-v6-c-code-block__pre"
              >
                <code
                  class="pf-v6-c-code-block__code"
                />
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__footer"
        >
          <div
            class="pf-v6-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-_r_k_"
            data-ouia-component-type="PF6/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v6-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
                />
              </svg>
            </div>
            <h4
              class="pf-v6-c-alert__title"
            >
              <span
                class="pf-v6-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v6-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm > should render nothing if no schema is available 1`] = `
<div>
  <div
    class="canvas-form"
  >
    <div
      class="canvas-form__header"
    >
      <div
        class="form-header-row"
      >
        <div
          class="form-header"
        >
          <h2
            class="form-header__title"
          >
            route
          </h2>
        </div>
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-_r_6_"
              class="canvas-header-close cds--btn cds--btn--sm cds--layout--size-sm cds--btn--ghost cds--btn--icon-only"
              data-testid="close-side-bar"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_6_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
      <div
        aria-label="Single selectable form tabs"
        class="cds--content-switcher form-tabs cds--layout-constraint--size__default-md cds--layout-constraint--size__min-sm cds--layout-constraint--size__max-lg"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="cds--content-switcher-btn cds--content-switcher--selected"
          data-testid="tab-Required"
          role="tab"
          tabindex="0"
          title="Shows Required fields only"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="Required"
          >
            Required
          </span>
        </button>
        <button
          aria-selected="false"
          class="cds--content-switcher-btn"
          data-testid="tab-All"
          role="tab"
          tabindex="-1"
          title="Shows All fields"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="All"
          >
            All
          </span>
        </button>
        <button
          aria-selected="false"
          class="cds--content-switcher-btn"
          data-testid="tab-Modified"
          role="tab"
          tabindex="-1"
          title="Shows Modified fields only"
          type="button"
        >
          <span
            class="cds--content-switcher__label"
            title="Modified"
          >
            Modified
          </span>
        </button>
      </div>
      <div
        aria-label="Find properties by name"
        class="cds--search cds--search--sm filter-fields"
        role="search"
      >
        <div
          class="cds--search-magnifier"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="cds--search-magnifier-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15,14.3L10.7,10c1.9-2.3,1.6-5.8-0.7-7.7S4.2,0.7,2.3,3S0.7,8.8,3,10.7c2,1.7,5,1.7,7,0l4.3,4.3L15,14.3z M2,6.5 C2,4,4,2,6.5,2S11,4,11,6.5S9,11,6.5,11S2,9,2,6.5z"
            />
          </svg>
        </div>
        <label
          class="cds--label"
          for="search-input-_r_9_"
          id="search-input-_r_9_-search"
        >
          Find properties by name
        </label>
        <input
          autocomplete="off"
          class="cds--search-input"
          data-testid="filter-fields"
          id="search-input-_r_9_"
          placeholder="Find properties by name"
          type="search"
          value=""
        />
        <button
          aria-label="Clear search input"
          class="cds--search-close cds--search-close--hidden"
          title="Clear search input"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="canvas-form__body"
    >
      <div
        class="pf-v6-c-card"
        data-ouia-component-id="OUIA-Generated-Card-_r_a_"
        data-ouia-component-type="PF6/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v6-c-card__header"
        >
          <div
            class="pf-v6-c-card__header-main"
          >
            <div
              class="pf-v6-c-card__title"
            >
              <div
                class="pf-v6-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__body"
        >
          <div
            class="pf-v6-c-code-block"
          >
            <div
              class="pf-v6-c-code-block__content"
            >
              <pre
                class="pf-v6-c-code-block__pre"
              >
                <code
                  class="pf-v6-c-code-block__code"
                >
                  id: route-8888
from:
  uri: timer
  parameters:
    timerName: tutorial
  steps:
    - set-header:
        simple: \${random(2)}
        name: myChoice
    - choice:
        when:
          - simple: \${header.myChoice} == 1
            steps:
              - log:
                  id: log-1
                  message: We got a one.
        otherwise:
          steps:
            - to:
                uri: "amqp:queue:"
            - to:
                uri: "amqp:queue:"
            - log:
                id: log-2
                message: We got a \${body}
    - to:
        uri: direct:my-route
        parameters:
          bridgeErrorHandler: true

                </code>
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__footer"
        >
          <div
            class="pf-v6-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-_r_c_"
            data-ouia-component-type="PF6/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v6-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
                />
              </svg>
            </div>
            <h4
              class="pf-v6-c-alert__title"
            >
              <span
                class="pf-v6-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v6-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
